<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.immortal.multiscreen.ChronometerFragment"
    android:stretchColumns="0,1,2">


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Chronometer
            android:id="@+id/chronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="3"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/button_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progress_bar_start" />

        <Button
            android:id="@+id/button_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progres_bar_stop" />

        <Button
            android:id="@+id/button_restart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restart" />
    </TableRow>
</TableLayout>
