<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/googleResearchTableLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="5dp"
    android:stretchColumns="*"
    tools:context="com.example.immortal.multiscreen.GoogleReSearch">

    <TableRow
        android:id="@+id/tablerow0"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/queryEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:hint="@string/queryprompt"
            android:imeOptions="actionNext"
            android:inputType="text" />
    </TableRow>

    <TableRow
        android:id="@+id/tablerow1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/tagEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:hint="@string/tagprompt"
            android:imeOptions="actionDone"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/save" />
    </TableRow>

    <TableRow
        android:id="@+id/tablerow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_yellow">

        <TextView
            android:id="@+id/taggedSearchesTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_span="2"
            android:padding="5dp"
            android:text="@string/taggedsearches"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </TableRow>

    <TableRow
        android:id="@+id/tablerow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/light_yellow">

        <ScrollView
            android:id="@+id/queryScrollView"
            android:layout_width="match_parent"
            android:layout_span="2"
            android:padding="5dp">

            <TableLayout
                android:id="@+id/queryTableLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp"
                android:stretchColumns="*" />
        </ScrollView>
    </TableRow>

    <TableRow
        android:id="@+id/tablerow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/clearTagsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_span="2"
            android:text="@string/cleartags" />
    </TableRow>
</TableLayout>
